--- a/src/SportRadar/CalendarBundle/Resources/views/Default/index.html.twig
+++ b/src/SportRadar/CalendarBundle/Resources/views/Default/index.html.twig
@@ -74,6 +74,8 @@ bootstrap.min.css'>
               success:function(data)
               {
                   console.log(data);
+                  events();
+                  $('#myModal').modal('hide');
               },
               error: function(error){
                 console.log("Something went wrong", error);
@@ -93,7 +95,7 @@ bootstrap.min.css'>
             data: {title:title},
             success:function(data)
               {
-                  events()
+                  
               },
               error: function(error){
                 console.log("Something went wrong", error);
